--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -202,3 +202,15 @@ main {
 .bold {
   font-weight: 800;
 }
+
+.icones-repo {
+  background-color: #483D8B;
+  height: fit-content;
+  padding: 5px;
+  color: #fff;
+  text-align: center;
+  align-self: center;
+  border-radius: 5px;
+  display: inline-block;
+  margin-top: 5px;
+}
